[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
resp = "1.0.3"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
executor = "0.8.4"
indexmap = "2.12.0"
#thiserror = "1.0.32"                                # error handling
#tokio = { version = "1.23.0", features = ["full"] } # async networking
