[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
resp = "1.0.3"
tokio = { version = "1.47.1", features = ["full"] }
executor = "0.8.4"
indexmap = "2.12.0"
clap = { version = "4.5.50", features = ["derive"] }
rand = "0.10.0-rc.0"
base64 = "0.22.1"
log = "0.4.28"
ordered-float = { version = "5.0", default-features = false }
futures = "0.3.31"
#thiserror = "1.0.32"                                # error handling
#tokio = { version = "1.23.0", features = ["full"] } # async networking
